Fixed alignment of window icon

--- a/components/QuoteModalContent/QuoteModalContent.module.scss
+++ b/components/QuoteModalContent/QuoteModalContent.module.scss
@@ -105,6 +105,5 @@
   svg {
     position: relative;
     left: 0.2em;
-    bottom: 0.2em;
   }
 }
